--- a/local/src_v6/core/main/font-face/style.scss
+++ b/local/src_v6/core/main/font-face/style.scss
@@ -18,37 +18,51 @@ $_font-family-sans-serif: Helvetica, Arial, sans-serif;
   font-style: normal;
 }
 
-@include font-face('Roboto Regular', Roboto-Regular);
-$font-r: Roboto-Regular, $_font-family-sans-serif;
+@include font-face('Cera Pro', CeraPro-Regular);
+$font-r: CeraPro-Regular, $_font-family-sans-serif;
 @mixin font-family-regular() {
   font-family: $font-r;
   @include skip-font-styles();
 }
 
-@include font-face('Roboto Bold', Roboto-Bold);
-$font-b: Roboto-Bold, $_font-family-sans-serif;
+@include font-face('Cera Pro', CeraPro-Bold);
+$font-b: CeraPro-Bold, $_font-family-sans-serif;
 @mixin font-family-bold() {
   font-family: $font-b;
   @include skip-font-styles();
 }
 
-@include font-face('Roboto Italic', Roboto-Italic);
-$font-i: Roboto-Italic, $_font-family-sans-serif;
+@include font-face('Cera Pro', CeraPro-Italic);
+$font-i: CeraPro-Italic, $_font-family-sans-serif;
 @mixin font-family-italic() {
   font-family: $font-i;
   @include skip-font-styles();
 }
 
-@include font-face('Roboto Light', Roboto-Light);
-$font-l: Roboto-Light, $_font-family-sans-serif;
+@include font-face('Cera Pro', CeraPro-Light);
+$font-l: CeraPro-Light, $_font-family-sans-serif;
 @mixin font-family-light() {
   font-family: $font-l;
   @include skip-font-styles();
 }
 
-@include font-face('Roboto Medium', Roboto-Medium);
-$font-m: Roboto-Medium, $_font-family-sans-serif;
+@include font-face('Cera Pro', CeraPro-Medium);
+$font-m: CeraPro-Medium, $_font-family-sans-serif;
 @mixin font-family-medium() {
   font-family: $font-m;
+  @include skip-font-styles();
+}
+
+@include font-face('Cormorant', Cormorant-Regular);
+$font-cormorant-r: Cormorant-Regular, $_font-family-sans-serif;
+@mixin font-family-cormorant-r() {
+  font-family: $font-cormorant-r;
+  @include skip-font-styles();
+}
+
+@include font-face('Cormorant', Cormorant-Medium);
+$font-cormorant-m: Cormorant-Medium, $_font-family-sans-serif;
+@mixin font-family-cormorant-m() {
+  font-family: $font-cormorant-m;
   @include skip-font-styles();
 }
