--- a/local/src_v6/core/main/variables/style.scss
+++ b/local/src_v6/core/main/variables/style.scss
@@ -7,8 +7,8 @@ $grid-columns:                      12;
 $grid-gutter-width:                 20px;
 
 // media breakpoints
-$screen-xl-min:                     1220px;
-$container-xl:                      1160px + $grid-gutter-width;
+$screen-xl-min:                     1320px;
+$container-xl:                      1300px + $grid-gutter-width;
 
 $screen-lg-min:                     992px;
 $container-lg:                      960px;
@@ -31,7 +31,7 @@ $grid-breakpoint-min:               $screen-lg-min;
 $grid-breakpoint-max:               $screen-md-max;
 
 $site-min-width:                    300px;
-$content-max-width:                 1200px;
+$content-max-width:                 1300px;
 $site-max-width:                    1920px;
 
 
@@ -50,7 +50,7 @@ $brand-3-active:                    #438101;
 $brand-success:                     #28a745;
 $brand-info:                        #17a2b8;
 $brand-warning:                     #ffc107;
-$brand-danger:                      #dc3545;
+$brand-danger:                      #E33834;
 
 $brand-white:                       #ffffff;
 $brand-gray-1:                      #f8f9fa;
@@ -62,6 +62,8 @@ $brand-gray-6:                      #6c757d;
 $brand-gray-7:                      #495057;
 $brand-gray-8:                      #343a40;
 $brand-gray-9:                      #212529;
+$brand-gray-10:                     #080508;
+$brand-gray-11:                     #777777;
 $brand-black:                       #000000;
 
 $brand-light:                       $brand-gray-1;
@@ -70,31 +72,31 @@ $brand-dark:                        $brand-gray-8;
 $body-bg-color:                     $brand-white;
 $body-bg-outer-color:               $brand-gray-4;
 
-$headings-color:                    $brand-black;
-$text-color:                        $brand-gray-8;
-$text-footer-color:                 $brand-gray-6;
+$headings-color:                    $brand-gray-10;
+$text-color:                        $brand-black;
+$text-footer-color:                 $brand-gray-11;
 $disabled-color:                    $brand-gray-2;
 
-$link-color:                        $brand-1;
+$link-color:                        $brand-gray-10;
 $link-color-hover:                  $brand-2;
 $link-color-active:                 $brand-1-active;
 $link-color-active-hover:           $brand-2-active;
 
-$border-color-base:                 $brand-gray-4;
+$border-color-base:                 $brand-gray-11;
 
 $state-success-text:                lighten($brand-success, 10%);
 $state-success-bg:                  lighten($brand-success, 29%);
 $state-danger-text:                 $brand-danger;
 $state-danger-bg:                   lighten($brand-danger, 29%);
 
-$caption-color:                     $brand-gray-6;
+$caption-color:                     $brand-gray-11;
 
 $input-bg:                          $brand-white;
 $input-color:                       $text-color;
-$input-border-color:                $brand-gray-5;
-$input-focus-border-color:          $brand-1;
+$input-border-color:                $brand-gray-11;
+$input-focus-border-color:          $brand-black;
 $input-error-border-color:          $brand-danger;
-$input-placeholder-color:           $caption-color;
+$input-placeholder-color:           $brand-gray-11;
 
 
 //================================================================================//
@@ -103,28 +105,28 @@ $input-placeholder-color:           $caption-color;
 $font-family-base:                  $font-r;
 
 $font-size-root:                    10px;
-$font-size-base:                    1.6rem; // Assumes the browser default, typically `16px`
-$font-size-lg:                      2.0rem;
-$font-size-sm:                      1.4rem;
-$font-size-xs:                      1.2rem;
+$font-size-base:                    1.8rem; // Assumes the browser default, typically `16px`
+$font-size-lg:                      1.8rem;
+$font-size-sm:                      1.6rem;
+$font-size-xs:                      1.6rem;
 
-$line-height-base:                  1.35;
+$line-height-base:                  1.6;
 
 // Headings
 $headings-margin-bottom:            0.5rem;
-$headings-font-family:              $font-m;
-$headings-line-height:              1.1;
+$headings-font-family:              $font-cormorant-r;
+$headings-line-height:              1.2;
 
-$font-size-h1:                      3.6rem;
+$font-size-h1:                      4.0rem;
 $font-size-h1-small:                3.0rem;
-$font-size-h2:                      2.2rem;
+$font-size-h2:                      3.0rem;
 $font-size-h3:                      1.8rem;
 $font-size-h4:                      1.6rem;
 $font-size-h5:                      1.5rem;
 $font-size-h6:                      1.4rem;
 
-$line-height-h1:                    1.1;
-$line-height-h1-small:              1.1;
+$line-height-h1:                    1.2;
+$line-height-h1-small:              1.2;
 $line-height-h2:                    1.2;
 $line-height-h3:                    1.3;
 $line-height-h4:                    1.3;
@@ -152,15 +154,15 @@ $transition-link:                   $transition-default;
 //================================================================================//
 //================================ Border-radius =================================//
 //================================================================================//
-$border-radius-base:                0.2rem;
+$border-radius-base:                0;
 
 
 //================================================================================//
 //==================================== Forms =====================================//
 //================================================================================//
 // Inputs
-$input-font-size:                   1.5rem;
-$input-line-height:                 1.5;
+$input-font-size:                   1.6rem;
+$input-line-height:                 1.25;
 
 
 //================================================================================//
