--- a/local/src_v6/components/header/menu/menu-drop-8/index.pug
+++ b/local/src_v6/components/header/menu/menu-drop-8/index.pug
@@ -3,19 +3,19 @@ include ../submenu-big-2/index
 include ../../../util/menuMore/index
 .menu-drop-8.js-menu-tablet.js-menuMore.d-print-none
   ul.menu_level_1.break-word.list-reset
-    li.item_1.has-submenu-2.active
+    li.item_1.has-submenu-2
       a(href="#")
         span Каталог
         span.icon
       .submenu-2.js-menu-sort-wrap.js-submenu-scroll-wrap
         +submenu-big-2()
-    li.item_1.has-submenu
+    li.item_1.has-submenu-2
       a(href="#")
         span Бренды
         span.icon
       .submenu-2.js-submenu-scroll-wrap
         include ../submenu-big/index
-    li.item_1.has-submenu-2.active
+    li.item_1
       span
         span Блог
     li.item_1
