--- a/local/src_v6/core/main/variables/style.scss
+++ b/local/src_v6/core/main/variables/style.scss
@@ -186,7 +186,7 @@ $caption-font-family:               $font-i;
 //================================================================================//
 //================================ Shadow ========================================//
 //================================================================================//
-$box-shadow-base: 0px 4px 15px rgba(0, 0, 0, 0.2);
+$box-shadow-base: 0 4px 15px rgba(0, 0, 0, 0.2);
 
 
 //================================================================================//
