--- a/local/templates/.default/_standart/examples/headers/header-3.html
+++ b/local/templates/.default/_standart/examples/headers/header-3.html
@@ -79,7 +79,7 @@
 								<div class="header__right">
 									<div class="menu-drop-8 js-menu-tablet js-menuMore d-print-none">
 										<ul class="menu_level_1 break-word list-reset">
-											<li class="item_1 has-submenu-2 active"><a href="#"><span>Каталог</span></a>
+											<li class="item_1 has-submenu-2"><a href="#"><span>Каталог</span><span class="icon"></span></a>
 												<div class="submenu-2 js-menu-sort-wrap js-submenu-scroll-wrap">
 																						<div class="submenu-big-2 js-menu-sort js-submenu-scroll">
 																							<div class="inner js-menu-inner js-submenu-inner">
@@ -541,82 +541,7 @@
 																						</div>
 												</div>
 											</li>
-											<li class="item_1 has-submenu"><a href="#"><span>Бренды</span><span class="icon"></span></a>
-												<div class="submenu">
-																						<div class="submenu-3">
-																							<ul class="menu_level_2 list-reset">
-																								<li class="item_2 active">
-																									<a href="#"><span>О компании</span>
-																									</a>
-																								</li>
-																								<li class="item_2">
-																									<a href="#"><span>Продукция</span>
-																										<div class="icon"></div>
-																									</a>
-																									<div class="submenu-inner">
-																										<ul class="menu_level_3 list-reset">
-																											<li class="item_3 active">
-																												<a href="#"><span>О компании</span>
-																												</a>
-																											</li>
-																											<li class="item_3">
-																												<a href="#"><span>Продукция</span>
-																													<div class="icon"></div>
-																												</a>
-																												<div class="submenu-inner">
-																													<ul class="menu_level_4 list-reset">
-																														<li class="item_4 active">
-																															<span><span>Наши проекты</span></span>
-																														</li>
-																														<li class="item_4">
-																															<a href="#"><span>Инструменты и загрузки</span></a>
-																														</li>
-																														<li class="item_4">
-																															<a href="#"><span>Контакты</span></a>
-																														</li>
-																													</ul>
-																												</div>
-																											</li>
-																											<li class="item_3 active">
-																												<span><span>Услуги</span>
-																												</span>
-																											</li>
-																											<li class="item_3">
-																												<a href="#"><span>Наши проекты</span>
-																												</a>
-																											</li>
-																											<li class="item_3">
-																												<a href="#"><span>Инструменты и загрузки</span>
-																												</a>
-																											</li>
-																											<li class="item_3">
-																												<a href="#"><span>Контакты</span>
-																												</a>
-																											</li>
-																										</ul>
-																									</div>
-																								</li>
-																								<li class="item_2 active">
-																									<span><span>Услуги</span>
-																									</span>
-																								</li>
-																								<li class="item_2">
-																									<a href="#"><span>Наши проекты</span>
-																									</a>
-																								</li>
-																								<li class="item_2">
-																									<a href="#"><span>Инструменты и загрузки</span>
-																									</a>
-																								</li>
-																								<li class="item_2">
-																									<a href="#"><span>Контакты</span>
-																									</a>
-																								</li>
-																							</ul>
-																						</div>
-												</div>
-											</li>
-											<li class="item_1 has-submenu-2 active"><span><span>Блог</span><span class="icon"></span></span>
+											<li class="item_1 has-submenu-2"><a href="#"><span>Бренды</span><span class="icon"></span></a>
 												<div class="submenu-2 js-submenu-scroll-wrap">
 													<div class="submenu-big">
 														<div class="inner js-submenu-scroll">
@@ -751,6 +676,7 @@
 													</div>
 												</div>
 											</li>
+											<li class="item_1"><span><span>Блог</span></span></li>
 											<li class="item_1"><span><span>О нас</span></span></li>
 											<li class="item_1"><a href="#"><span>Сотрудничество</span></a></li>
 											<li class="item_1 has-submenu"><a href="#"><span>Покупателю</span><span class="icon"></span></a>
