--- a/local/src_v6/components/header/menu/menu-drop-8/style.scss
+++ b/local/src_v6/components/header/menu/menu-drop-8/style.scss
@@ -2,7 +2,7 @@ $_menu-drop-8-color:                       $brand-gray-12;
 $_menu-drop-8-color-hover:                 $link-color;
 $_menu-drop-8-color-active:                $link-color;
 $_menu-drop-8-color-active-hover:          $_menu-drop-8-color-active;
-$_menu-drop-8-submenu-z-index:             -2;
+$_menu-drop-8-submenu-z-index:             -1;
 $_menu-drop-8-submenu-offset-y:            0;
 $_menu-drop-8-submenu-bg:                  $body-bg-color;
 
@@ -38,13 +38,17 @@ $_menu-drop-8-submenu-bg:                  $body-bg-color;
   .item_1 {
     vertical-align: middle;
     display: table-cell;
-    padding-right: 29px;
+    padding-left: 29px;
 
     @media (max-width: $screen-lg-max) {
-      padding-right: 30px;
+      padding-left: 20px;
     }
 
-    @include hover-focus() {
+    &:first-child {
+      padding-left: 0;
+    }
+
+    &.active {
 
       &.has-submenu,
       &.has-submenu-2 {
@@ -85,6 +89,10 @@ $_menu-drop-8-submenu-bg:                  $body-bg-color;
       position: static;
     }
 
+    &.has-submenu {
+      position: relative;
+    }
+
     &.has-submenu,
     &.has-submenu-2 {
 
@@ -96,11 +104,11 @@ $_menu-drop-8-submenu-bg:                  $body-bg-color;
           content: '';
           position: absolute;
           bottom: -65px;
-          z-index: $_menu-drop-8-submenu-z-index + 1;
+          z-index: $_menu-drop-8-submenu-z-index;
           right: -24px;
           width: 60px;
           height: 60px;
-          background: $brand-white;
+          background: red;
           @include sumbenu-before-hover;
           transition: opacity .3s ease, transform .3s ease-in;
         }
@@ -117,6 +125,11 @@ $_menu-drop-8-submenu-bg:                  $body-bg-color;
       text-decoration: none;
       font-size: 16px;
 
+      @media (max-width: $screen-lg-max) {
+        font-size: 14px;
+      }
+
+      > a:not(.icon),
       > span:not(.icon) {
         display: inline-block;
         vertical-align: middle;
@@ -126,10 +139,14 @@ $_menu-drop-8-submenu-bg:                  $body-bg-color;
 
       .icon {
         display: inline-block;
-        vertical-align: middle;
+        vertical-align: -2px;
         @include svg();
         @include svg-menu-drop-8-arrow();
         margin-left: 10px;
+
+        @media (max-width: $screen-lg-max) {
+          margin-left: 3px;
+        }
       }
     }
 
