--- a/local/templates/.default/_standart/catalog/element-with-slider.html
+++ b/local/templates/.default/_standart/catalog/element-with-slider.html
@@ -608,7 +608,7 @@
 								<div class="header__col header__col--menu">
 									<div class="menu-drop-8 js-menu-tablet js-menuMore d-print-none">
 										<ul class="menu_level_1 break-word list-reset">
-											<li class="item_1 has-submenu-2 active"><a href="#"><span>Каталог</span></a>
+											<li class="item_1 has-submenu-2"><a href="#"><span>Каталог</span><span class="icon"></span></a>
 												<div class="submenu-2 js-menu-sort-wrap js-submenu-scroll-wrap">
 																						<div class="submenu-big-2 js-menu-sort js-submenu-scroll">
 																							<div class="inner js-menu-inner js-submenu-inner">
@@ -1070,82 +1070,7 @@
 																						</div>
 												</div>
 											</li>
-											<li class="item_1 has-submenu"><a href="#"><span>Бренды</span><span class="icon"></span></a>
-												<div class="submenu">
-																						<div class="submenu-3">
-																							<ul class="menu_level_2 list-reset">
-																								<li class="item_2 active">
-																									<a href="#"><span>О компании</span>
-																									</a>
-																								</li>
-																								<li class="item_2">
-																									<a href="#"><span>Продукция</span>
-																										<div class="icon"></div>
-																									</a>
-																									<div class="submenu-inner">
-																										<ul class="menu_level_3 list-reset">
-																											<li class="item_3 active">
-																												<a href="#"><span>О компании</span>
-																												</a>
-																											</li>
-																											<li class="item_3">
-																												<a href="#"><span>Продукция</span>
-																													<div class="icon"></div>
-																												</a>
-																												<div class="submenu-inner">
-																													<ul class="menu_level_4 list-reset">
-																														<li class="item_4 active">
-																															<span><span>Наши проекты</span></span>
-																														</li>
-																														<li class="item_4">
-																															<a href="#"><span>Инструменты и загрузки</span></a>
-																														</li>
-																														<li class="item_4">
-																															<a href="#"><span>Контакты</span></a>
-																														</li>
-																													</ul>
-																												</div>
-																											</li>
-																											<li class="item_3 active">
-																												<span><span>Услуги</span>
-																												</span>
-																											</li>
-																											<li class="item_3">
-																												<a href="#"><span>Наши проекты</span>
-																												</a>
-																											</li>
-																											<li class="item_3">
-																												<a href="#"><span>Инструменты и загрузки</span>
-																												</a>
-																											</li>
-																											<li class="item_3">
-																												<a href="#"><span>Контакты</span>
-																												</a>
-																											</li>
-																										</ul>
-																									</div>
-																								</li>
-																								<li class="item_2 active">
-																									<span><span>Услуги</span>
-																									</span>
-																								</li>
-																								<li class="item_2">
-																									<a href="#"><span>Наши проекты</span>
-																									</a>
-																								</li>
-																								<li class="item_2">
-																									<a href="#"><span>Инструменты и загрузки</span>
-																									</a>
-																								</li>
-																								<li class="item_2">
-																									<a href="#"><span>Контакты</span>
-																									</a>
-																								</li>
-																							</ul>
-																						</div>
-												</div>
-											</li>
-											<li class="item_1 has-submenu-2 active"><span><span>Блог</span><span class="icon"></span></span>
+											<li class="item_1 has-submenu-2"><a href="#"><span>Бренды</span><span class="icon"></span></a>
 												<div class="submenu-2 js-submenu-scroll-wrap">
 													<div class="submenu-big">
 														<div class="inner js-submenu-scroll">
@@ -1280,6 +1205,7 @@
 													</div>
 												</div>
 											</li>
+											<li class="item_1"><span><span>Блог</span></span></li>
 											<li class="item_1"><span><span>О нас</span></span></li>
 											<li class="item_1"><a href="#"><span>Сотрудничество</span></a></li>
 											<li class="item_1 has-submenu"><a href="#"><span>Покупателю</span><span class="icon"></span></a>
@@ -1350,15 +1276,15 @@
 								<div class="header__col header__col--contacts">
 									<div class="contacts-head-5">
 										<div class="contacts-head-5__dropdown-wrap">
-											<div class="contacts-head-5__dropdown dropdown"><a class="contacts-head-5__toggle dropdown-toggle" data-toggle="dropdown" href="#"><span>+375 (17) 285-39-26</span></a>
+											<div class="contacts-head-5__dropdown dropdown"><a class="contacts-head-5__toggle dropdown-toggle" data-toggle="dropdown" href="#"><span>+375 (33) 382-31-38</span></a>
 												<div class="contacts-head-5__menu dropdown-menu">
 													<div class="contacts-head-5__list">
 														<div class="contacts-head-5__item">
-															<div class="contacts-head-5__item-subtitle">Горячая линия:</div><a class="contacts-head-5__item-link" href="tel:+375172853926"><span>+375 (17) 285-39-26</span></a>
+															<div class="contacts-head-5__item-subtitle">Горячая линия:</div><a class="contacts-head-5__item-link" href="tel:+375333823138"><span>+375 (33) 382-31-38</span></a>
 															<div class="contacts-head-5__item-helper">(вт. и чт. с 10:00 до 12:00)</div>
 														</div>
 														<div class="contacts-head-5__item">
-															<div class="contacts-head-5__item-subtitle">Горячая линия:</div><a class="contacts-head-5__item-link" href="tel:+375172853926"><span>+375 (17) 285-39-26</span></a>
+															<div class="contacts-head-5__item-subtitle">Горячая линия:</div><a class="contacts-head-5__item-link" href="tel:+375333823138"><span>+375 (33) 382-31-38</span></a>
 															<div class="contacts-head-5__item-helper">(вт. и чт. с 10:00 до 12:00)</div>
 														</div>
 													</div>
