--- a/local/templates/.default/etalon.html
+++ b/local/templates/.default/etalon.html
@@ -112,7 +112,7 @@
 								<div class="header__col header__col--menu">
 									<div class="menu-drop-8 js-menu-tablet js-menuMore d-print-none">
 										<ul class="menu_level_1 break-word list-reset">
-											<li class="item_1 has-submenu-2 active"><a href="#"><span>Каталог</span><span class="icon"></span></a>
+											<li class="item_1 has-submenu-2"><a href="#"><span>Каталог</span><span class="icon"></span></a>
 												<div class="submenu-2 js-menu-sort-wrap js-submenu-scroll-wrap">
 																						<div class="submenu-big-2 js-menu-sort js-submenu-scroll">
 																							<div class="inner js-menu-inner js-submenu-inner">
@@ -574,7 +574,7 @@
 																						</div>
 												</div>
 											</li>
-											<li class="item_1 has-submenu"><a href="#"><span>Бренды</span><span class="icon"></span></a>
+											<li class="item_1 has-submenu-2"><a href="#"><span>Бренды</span><span class="icon"></span></a>
 												<div class="submenu-2 js-submenu-scroll-wrap">
 													<div class="submenu-big">
 														<div class="inner js-submenu-scroll">
@@ -709,7 +709,7 @@
 													</div>
 												</div>
 											</li>
-											<li class="item_1 has-submenu-2 active"><span><span>Блог</span></span></li>
+											<li class="item_1"><span><span>Блог</span></span></li>
 											<li class="item_1"><span><span>О нас</span></span></li>
 											<li class="item_1"><a href="#"><span>Сотрудничество</span></a></li>
 											<li class="item_1 has-submenu"><a href="#"><span>Покупателю</span><span class="icon"></span></a>
@@ -780,15 +780,15 @@
 								<div class="header__col header__col--contacts">
 									<div class="contacts-head-5">
 										<div class="contacts-head-5__dropdown-wrap">
-											<div class="contacts-head-5__dropdown dropdown"><a class="contacts-head-5__toggle dropdown-toggle" data-toggle="dropdown" href="#"><span>+375 (17) 285-39-26</span></a>
+											<div class="contacts-head-5__dropdown dropdown"><a class="contacts-head-5__toggle dropdown-toggle" data-toggle="dropdown" href="#"><span>+375 (33) 382-31-38</span></a>
 												<div class="contacts-head-5__menu dropdown-menu">
 													<div class="contacts-head-5__list">
 														<div class="contacts-head-5__item">
-															<div class="contacts-head-5__item-subtitle">Горячая линия:</div><a class="contacts-head-5__item-link" href="tel:+375172853926"><span>+375 (17) 285-39-26</span></a>
+															<div class="contacts-head-5__item-subtitle">Горячая линия:</div><a class="contacts-head-5__item-link" href="tel:+375333823138"><span>+375 (33) 382-31-38</span></a>
 															<div class="contacts-head-5__item-helper">(вт. и чт. с 10:00 до 12:00)</div>
 														</div>
 														<div class="contacts-head-5__item">
-															<div class="contacts-head-5__item-subtitle">Горячая линия:</div><a class="contacts-head-5__item-link" href="tel:+375172853926"><span>+375 (17) 285-39-26</span></a>
+															<div class="contacts-head-5__item-subtitle">Горячая линия:</div><a class="contacts-head-5__item-link" href="tel:+375333823138"><span>+375 (33) 382-31-38</span></a>
 															<div class="contacts-head-5__item-helper">(вт. и чт. с 10:00 до 12:00)</div>
 														</div>
 													</div>
