--- a/local/src_v6/components/header/head-links/index.pug
+++ b/local/src_v6/components/header/head-links/index.pug
@@ -1,11 +1,11 @@
 .head-links
   .head-links__row
     .head-links__col
-      a.head-links__link.head-links__link--search(href="#")
-        .head-links__icon
+      .head-links__link.head-links__link--search
+        include ../search/search-head-5/index
     .head-links__col
-      a.head-links__link.head-links__link--cart(href="#")
-        .head-links__icon
+      .head-links__link.head-links__link--cart
+        include ../head-cart/index
     .head-links__col
       a.head-links__link.head-links__link--favorites(href="#")
         .head-links__icon
