--- a/local/src_v6/components/header/menu/menu-drop-8/index.pug
+++ b/local/src_v6/components/header/menu/menu-drop-8/index.pug
@@ -62,6 +62,6 @@ include ../../../util/menuMore/index
                 href: '#'
             }
         ])
-    +menuMore({
-        itemModifier: 'has-submenu'
-    })
+    //+menuMore({
+    //    itemModifier: 'has-submenu'
+    //})
