--- a/local/templates/.default/_standart/examples/headers/header-2.html
+++ b/local/templates/.default/_standart/examples/headers/header-2.html
@@ -784,13 +784,9 @@
 																								</div>
 													</div>
 												</li>
-																						<li class="item_1 more has-submenu"><span><span>Ещё</span><span class="icon"></span></span>
-																							<div class="submenu">
-																								<div class="submenu-3">
-																									<ul class="menu_level_2 list-reset"></ul>
-																								</div>
-																							</div>
-																						</li>
+												<!--+menuMore({-->
+												<!--    itemModifier: 'has-submenu'-->
+												<!--})-->
 											</ul>
 										</div>
 									</div>
