--- a/local/src_v6/components/base/btns/btn/style.scss
+++ b/local/src_v6/components/base/btns/btn/style.scss
@@ -19,9 +19,11 @@ button:focus {
   max-width: 100%;
   text-decoration: none;
   border: 1px solid transparent;
-  padding: 1.2rem 2.5rem;
-  font-size: $font-size-base;
+  padding: 16px 40px;
+  font-size: 16px;
   line-height: 1;
+  letter-spacing: 0.05em;
+  text-transform: uppercase;
   border-radius: $border-radius-base;
   color: $brand-white;
   transition: all .15s ease-in-out; // prevent flickering on link buttons
