menu icons script

--- a/local/src_v6/components/header/head-cards/index.pug
+++ b/local/src_v6/components/header/head-cards/index.pug
@@ -12,10 +12,7 @@
           .head-card__col.head-card__col--text
             .head-card__text Nouvelle Extreme Gel Гель для укладки волос силь..
           .head-card__col.head-card__col--btn
-            .head-card__btns
-              button.head-card__btn.head-card__btn--minus
-              input.head-card__btn.head-card__quantity(type='text', value='1')
-              button.head-card__btn.head-card__btn--plus
+            include ../../block/quantity/index
           .head-card__col.head-card__col--sum
             .head-card__sum 10.00 BYN
   .head-card
@@ -30,9 +27,6 @@
           .head-card__col.head-card__col--text
             .head-card__text BES АКТИВНЫЙ ШАМПУНЬ ДЛЯ ЖИРНЫХ ВОЛОС S1
           .head-card__col.head-card__col--btn
-            .head-card__btns
-              button.head-card__btn.head-card__btn--minus
-              input.head-card__quantity(type='text', value='1')
-              button.head-card__btn.head-card__btn--plus
+            include ../../block/quantity/index
           .head-card__col.head-card__col--sum
             .head-card__sum 26.00 BYN
