--- a/local/templates/.default/_standart/demo/about.html
+++ b/local/templates/.default/_standart/demo/about.html
@@ -833,10 +833,14 @@
 																						<div class="head-card__text">BES АКТИВНЫЙ ШАМПУНЬ ДЛЯ ЖИРНЫХ ВОЛОС S1</div>
 																					</div>
 																					<div class="head-card__col head-card__col--btn">
-																						<div class="head-card__btns">
-																							<button class="head-card__btn head-card__btn--minus"></button>
-																							<input class="head-card__quantity" type="text" value="1">
-																							<button class="head-card__btn head-card__btn--plus"></button>
+																						<!--.head-card__btns-->
+																						<!--  button.head-card__btn.head-card__btn--minus-->
+																						<!--  input.head-card__quantity(type='text', value='1')-->
+																						<!--  button.head-card__btn.head-card__btn--plus-->
+																						<div class="quantity js-quantity">
+																							<button class="quantity__btn quantity__btn--minus js-quantity-btn js-quantity-btn-minus"></button>
+																							<input class="quantity__input js-quantity-input" type="text" value="1">
+																							<button class="quantity__btn quantity__btn--plus js-quantity-btn js-quantity-btn-plus"></button>
 																						</div>
 																					</div>
 																					<div class="head-card__col head-card__col--sum">
