--- a/local/templates/.default/index.html
+++ b/local/templates/.default/index.html
@@ -807,10 +807,10 @@
 																						<div class="head-card__text">Nouvelle Extreme Gel Гель для укладки волос силь..</div>
 																					</div>
 																					<div class="head-card__col head-card__col--btn">
-																						<div class="head-card__btns">
-																							<button class="head-card__btn head-card__btn--minus"></button>
-																							<input class="head-card__btn head-card__quantity" type="text" value="1">
-																							<button class="head-card__btn head-card__btn--plus"></button>
+																						<div class="quantity js-quantity">
+																							<button class="quantity__btn quantity__btn--minus js-quantity-btn js-quantity-btn-minus"></button>
+																							<input class="quantity__input js-quantity-input" type="number" value="1" min="1">
+																							<button class="quantity__btn quantity__btn--plus js-quantity-btn js-quantity-btn-plus"></button>
 																						</div>
 																					</div>
 																					<div class="head-card__col head-card__col--sum">
@@ -834,10 +834,10 @@
 																						<div class="head-card__text">BES АКТИВНЫЙ ШАМПУНЬ ДЛЯ ЖИРНЫХ ВОЛОС S1</div>
 																					</div>
 																					<div class="head-card__col head-card__col--btn">
-																						<div class="head-card__btns">
-																							<button class="head-card__btn head-card__btn--minus"></button>
-																							<input class="head-card__quantity" type="text" value="1">
-																							<button class="head-card__btn head-card__btn--plus"></button>
+																						<div class="quantity js-quantity">
+																							<button class="quantity__btn quantity__btn--minus js-quantity-btn js-quantity-btn-minus"></button>
+																							<input class="quantity__input js-quantity-input" type="number" value="1" min="1">
+																							<button class="quantity__btn quantity__btn--plus js-quantity-btn js-quantity-btn-plus"></button>
 																						</div>
 																					</div>
 																					<div class="head-card__col head-card__col--sum">
