--- a/local/src_v6/components/header/menu/menu-drop-8/style.scss
+++ b/local/src_v6/components/header/menu/menu-drop-8/style.scss
@@ -9,7 +9,7 @@ $_menu-drop-8-submenu-bg:                  $body-bg-color;
 @mixin sumbenu-before-hover() {
   opacity: 0;
   visibility: hidden;
-  transform: translateY(20px) rotate(45deg);
+  transform: translateY(20px);
   transition: visibility .15s ease, opacity .3s ease, transform .3s ease-in;
 }
 
@@ -58,7 +58,7 @@ $_menu-drop-8-submenu-bg:                  $body-bg-color;
 
           &:after {
             @include submenu-hover;
-            transform: translateY(0) rotate(45deg);
+            transform: translateY(0);
           }
         }
       }
@@ -75,7 +75,7 @@ $_menu-drop-8-submenu-bg:                  $body-bg-color;
       > .submenu,
         .submenu-inner {
         left: auto;
-        right: 0;
+        right: -35px;
 
         .submenu,
         .submenu-inner {
@@ -103,12 +103,14 @@ $_menu-drop-8-submenu-bg:                  $body-bg-color;
         &:after {
           content: '';
           position: absolute;
-          bottom: -65px;
-          z-index: $_menu-drop-8-submenu-z-index;
-          right: -24px;
-          width: 60px;
-          height: 60px;
-          background: red;
+          bottom: 0;
+          z-index: $_menu-drop-8-submenu-z-index + 1;
+          right: -15px;
+          width: 0;
+          height: 0;
+          border-left: 20px solid transparent;
+          border-right: 20px solid transparent;
+          border-bottom: 20px solid $brand-white;
           @include sumbenu-before-hover;
           transition: opacity .3s ease, transform .3s ease-in;
         }
