--- a/local/src_v6/components/base/headers/style.scss
+++ b/local/src_v6/components/base/headers/style.scss
@@ -53,6 +53,7 @@ h1,
   font-size: $font-size-h1;
   line-height: $line-height-h1;
   margin: $head-margin-h1;
+  text-transform: uppercase;
 
   @media (max-width: $screen-sm-max) {
     font-size: decimal-round(($font-size-h1 * .8), 1);
@@ -82,6 +83,7 @@ h2,
   font-size: $font-size-h2;
   line-height: $line-height-h2;
   margin: $head-margin-h2;
+  text-transform: uppercase;
 
   @media (max-width: $screen-sm-max) {
     font-size: decimal-round(($font-size-h2 * .85), 1);
