--- a/local/src_v6/core/main/variables/style.scss
+++ b/local/src_v6/core/main/variables/style.scss
@@ -79,8 +79,8 @@ $text-color:                        $brand-black;
 $text-footer-color:                 $brand-gray-11;
 $disabled-color:                    $brand-gray-2;
 
-$link-color:                        $brand-gray-10;
-$link-color-hover:                  $brand-2;
+$link-color:                        $brand-gray-12;
+$link-color-hover:                  rgba($brand-gray-12, .8);
 $link-color-active:                 $brand-1-active;
 $link-color-active-hover:           $brand-2-active;
 
