--- a/local/src_v6/pages/proj/index.pug
+++ b/local/src_v6/pages/proj/index.pug
@@ -10,6 +10,7 @@ block content
   //include ../../components/pages/index/sl-products/index
   include ../../components/pages/index/card-links-3/index
   //include ../../components/pages/index/card-links/index
+  include ../../components/pages/index/main-blog/index
   include ../../components/footer/subscription/index
 block popup
   include ../../components/modals/fast-buy-modal/index
