--- a/local/src_v6/components/footer/subscription/style.scss
+++ b/local/src_v6/components/footer/subscription/style.scss
@@ -10,6 +10,7 @@
     margin-left: auto;
     margin-right: auto;
     text-align: center;
+    margin-bottom: 60px;
 
     @media (max-width: $screen-xs-max) {
       font-size: 20px;
