--- a/local/templates/.default/index.html
+++ b/local/templates/.default/index.html
@@ -1096,6 +1096,67 @@
 															</div>
 														</div>
 							<!--include ../../components/pages/index/card-links/index-->
+														<div class="b-section b-section--main-blog">
+															<div class="b-section__wrap">
+																<div class="b-section__head">
+																								<div class="b-head">
+																									<div class="b-head__row">
+																										<div class="b-head__col b-head__col--title">
+																											<div class="b-head__title h1">наш блог</div>
+																										</div>
+																										<div class="b-head__col b-head__col--link"><a class="b-head__link" href="#">
+																												<div class="b-head__link-text">Перейти в блог</div></a></div>
+																									</div>
+																								</div>
+																</div>
+																<div class="b-section__body">
+																	<div class="main-blog">
+																		<div class="main-blog__row row">
+																			<div class="main-blog__col col-lg-6 col-12">
+																				<div class="main-blog__card main-blog__card--big">
+																					<div class="main-blog__inner">
+																						<div class="main-blog__img-wrap">
+																							<div class="main-blog__img-inner"><img class="main-blog__img" src="img/tmp/main-blog--big.jpg" alt="alt"></div>
+																						</div>
+																						<div class="main-blog__descr">
+																							<div class="main-blog__title">открыта запись на обучение “фешн-макияж 2021”</div>
+																							<div class="main-blog__text">Запускаем курс коммерческого фешн-макияжа. В программе мастер-класс популярного фешн-визажиста Ирины Самсоновой...</div>
+																							<div class="main-blog__link-wrap"><a class="main-blog__link" href="#">подробнее</a></div>
+																						</div>
+																					</div>
+																				</div>
+																			</div>
+																			<div class="main-blog__col col-lg-6 col-12">
+																				<div class="main-blog__card">
+																					<div class="main-blog__inner">
+																						<div class="main-blog__img-wrap">
+																							<div class="main-blog__img-inner"><img class="main-blog__img" src="img/tmp/main-blog--01.jpg" alt="alt"></div>
+																						</div>
+																						<div class="main-blog__descr">
+																							<div class="main-blog__title">теперь и у нас! в продаже kylie skin</div>
+																							<!--.main-blog__text-->
+																							<div class="main-blog__link-wrap"><a class="main-blog__link" href="#">подробнее</a></div>
+																						</div>
+																					</div>
+																				</div>
+																				<div class="main-blog__card">
+																					<div class="main-blog__inner">
+																						<div class="main-blog__img-wrap">
+																							<div class="main-blog__img-inner"><img class="main-blog__img" src="img/tmp/main-blog--02.jpg" alt="alt"></div>
+																						</div>
+																						<div class="main-blog__descr">
+																							<div class="main-blog__title">начинаем продажу подарочных карт</div>
+																							<!--.main-blog__text-->
+																							<div class="main-blog__link-wrap"><a class="main-blog__link" href="#">подробнее</a></div>
+																						</div>
+																					</div>
+																				</div>
+																			</div>
+																		</div>
+																	</div>
+																</div>
+															</div>
+														</div>
 							<div class="subscription">
 								<div class="h1 title"><span>СЛЕДИТЕ ЗА ОБНОВЛЕНИЯМИ</span></div>
 								<form class="b-form" id="form-subscript-confirm" action="#">
